[package]
name = "miitopia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.21.1", features = ["full"] }
ogg_metadata = "0.4.1"
glob = "0.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
indexmap = "1.9.1"
ffmpeg-cli = "0.1.0"
