[package]
name = "miitopia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "utils",
] }
tokio = { version = "1.21.1", features = ["full"] }
ogg_metadata = "0.4.1"
glob = "0.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
indexmap = "1.9.1"
ffmpeg-cli = "0.1.0"
log = "0.4.17"
env_logger = "0.9.0"
human-repr = "1.0" # what's this?

reqwest = "0.11.12"   # Making requests to spotify API and web sourced music.
regex = "1.6.0"       # Checking for urls inside messges.
serde_json = "1.0.92" # Reading json from spotify API.
serde = "1.0.152"     # String typed json from spotify API.
base64 = "0.21.0"     # Base64 for spotify API tokens.
